@@ -12,6 +12,8 @@ class modSourceRemoveProcessor extends modObjectRemoveProcessor {
     public $languageTopics = array('source');
     public $permission = 'source_delete';
     public $objectType = 'source';
+    public $beforeRemoveEvent = 'OnMediaSourceBeforeFormDelete';
+    public $afterRemoveEvent = 'OnMediaSourceFormDelete';
 
     public function beforeRemove() {
         if ($this->object->get('id') == 1) return $this->modx->lexicon('source_err_remove_default');
